# Quick-Play-Bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 66fc740e7b35_add_saved_players_table.py  690825fbda5a_add_player_stats_table.py  6c7e8371b020_rename_cards_to_clash_royale_and_add_.py  9d1809f1d939_add_cards_table.py  b7ec15ce7c28_add_file_id_to_cards.py  c6b51f3889d1_initial_migration.py
app/: __init__.py  bot.py  config.py  database.py  models.py
app/data/cards/: cards_database.json
app/handlers/: help.py  players.py  rules.py  start.py  stats.py
app/handlers/spy_game/: __init__.py  game_manager.py  handlers.py  states.py
app/middleware/: channel_subscription.py  rate_limit.py
app/utils/: card_parser.py  download_cards.py  download_missing_cards.py  load_cards_to_db.py  logger.py  upload_cards_to_bot.py
