[project]
name = "quickplaybot"
version = "0.1.0"
description = "Telegram bot with PostgreSQL and Redis"
authors = [
    {name = "Артём", email = "artemiy.nowkov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.13.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "alembic>=1.13.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
